# wearedge-opea-manufacturing

./: .gitignore  Dockerfile  LICENSE  PROJECT_OVERVIEW.md  README.md  SUBMISSION.md  TECHNICAL_REPORT.md  deploy.sh  docker-compose.opea-tei.yml  docker-compose.opea.yml  docker-compose.reranker.yml  docker-compose.yml  project-profile.json  pyproject.toml  run_manufacturing_demo.sh  submission-fields.draft.json
data/: README.md  sample_request.json
docs/: 20-platform-publication-pack-2026-06-18.md  20-platform-publication-status-2026-06-18.md  README_OPENAI_MANUFACTURING_CONTENT.md  challenge-task-compliance.md  champion-gap-worklist.md  champion-risk-burn-down.md  claim-boundaries-openai-manufacturing.md  content-index-openai-manufacturing-2026-06-18.md  data-provenance-and-field-validation.md  demo-video-render-report.md  evaluation-criteria-scorecard.md  final-pre-submit-audit-2026-05-28.md  final-publication-verification-2026-06-18.md  final-submission-form-fill-guide.md  final-submission-readiness-audit.md  full-mark-gap-closure-plan.md  gcp-c3-docker-qdrant-e2e-report.md  gcp-c3-opea-profile-e2e-report.md  gcp-c3-opea-tei-profile-e2e-report.md  gcp-c3-tei-onednn-verbose-report.md  gcp-c3-tei-onednn-verbose-runbook.md  genaieval-compatible-evaluation.md  hardware-constraints-and-clean-run.md  intel-avx512-amx-benchmark-report.md  intel-effective-use-evidence.md  issue-publication-instructions.md  kubernetes-optional-profile.md  license-and-attribution.md  lmm-machine-oil-leak-benchmark-report.md  local-docker-desktop-final-validation.md  official-opea-profile.md  (+44 more)
(+107 files in other folders)
