[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wearedge-opea-manufacturing"
version = "0.1.0"
description = "OPEA-style Manufacturing submission wrapper for WearEdge Pro."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]

[tool.setuptools.packages.find]
where = ["src"]

